<resources>
    <string name="app_name">Technical Test Movie</string>
    <string name="tv_series_title">Title</string>
    <string name="release_date">Release Date</string>
    <string name="summary">Summary</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="recomendation_movies">Recommendation Movies</string>
    <string name="similiar_text">Similar Movies</string>
    <string name="topRated">Top Rated Movies(TMDB)</string>
    <string name="now_playing">Now Playing</string>
    <string name="popular">Popular</string>
    <string name="video_not_found">Video Not Found</string>
    <string name="upcoming">Upcoming</string>
    <string name="no_movies">No Movies</string>
    <string name="share">Share</string>
    <string name="movie">Movie</string>
    <string name="tv_series">Tv Series</string>
    <string name="favourite">Favourite</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="copy">Copy</string>
    <string name="tv_favorite">Favourite TV</string>
    <string name="movie_favorite">Favourite Movie</string>
    <string name="empty_favourite_tv">Anda belum menambahkan daftar favorit tv</string>
    <string name="empty_favourite_movie">Anda belum menambahkan daftar favorit movie</string>
    <string name="image_cover">Image Cover</string>
    <string name="loading">Loading</string>
    <string name="see_all">See All</string>
</resources>